--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: ruby-head
       env: PUPPET_GEM_VERSION="~> 2.7.0"
-gemfile: .gemfile
+gemfile: Gemfile
 notifications:
   email:
     - richard@ispavailability.com
